error.log
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "D:\DL\Brain_Tumor\Backend\predict.py", line 12
    raise FileNotFoundError(f\"Model file not found at {model_path}\")
                              ^
SyntaxError: unexpected character after line continuation character
